--- a/notebooks/query_graph.ipynb
+++ b/notebooks/query_graph.ipynb
@@ -32,7 +32,7 @@
     "import owlready2\n",
     "from elasticsearch import Elasticsearch\n",
     "from mapping import *\n",
-    "from path import *\n",
+    "from graph import *\n",
     "from konlpy.tag import Okt"
    ]
   },
@@ -55,21 +55,7 @@
     "\n",
     "# Load unit path data\n",
     "unit_path = pd.read_csv('../unit_path.csv')\n",
-    "G = generate_graph(unit_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# okt = Okt()\n",
-    "\n",
-    "# query = input(\"Question: \") # 용감한 형제가 작곡한 노래의 장르는?\n",
-    "# query_pos = okt.pos(query, norm=True)\n",
-    "\n",
-    "# query_terms = [q[0] for q in query_pos if q[1] not in [\"Josa\", \"Punctuation\"]]"
+    "G = base_graph_generation(unit_path)"
    ]
   },
   {
@@ -263,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -273,10 +259,10 @@
       "(SKMO_v2.4_0223.용감한_형제, SKMO_v2.4_0223.isComposedBy, mo.Track)의 shortest path\n",
       "\n",
       "(mo.Track, SKMO_v2.4_0223.hasGenre, owl.Thing)의 shortest path\n",
-      "['mo.Track', 'SKMO_v2.4_0223.Genre']\n",
+      "[('mo.Track', 'SKMO_v2.4_0223.hasGenre', 'SKMO_v2.4_0223.Genre')]\n",
       "\n",
       "(mo.Track, 'Any P', SKMO_v2.4_0223.Genre)의 shortest path\n",
-      "['mo.Track', 'SKMO_v2.4_0223.Genre']\n",
+      "[('mo.Track', 'SKMO_v2.4_0223.hasGenre', 'SKMO_v2.4_0223.Genre')]\n",
       "\n"
      ]
     }
