--- a/notebooks/shortest_path_finding.ipynb
+++ b/notebooks/shortest_path_finding.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import sys\n",
     "sys.path.append('../')\n",
-    "from path import *\n",
+    "from graph import *\n",
     "import pandas as pd"
    ]
   },
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "G = generate_graph(unit_path)"
+    "G = base_graph_generation(unit_path)"
    ]
   },
   {
@@ -49,7 +49,9 @@
     {
      "data": {
       "text/plain": [
-       "['schema.MusicAlbum', 'mo.Track', 'mo.MusicGroup', 'schema.Country']"
+       "[('schema.MusicAlbum', 'SKMO_v2.4_0223.hasTrack', 'mo.Track'),\n",
+       " ('mo.Track', 'SKMO_v2.4_0223.isSungBy', 'mo.MusicGroup'),\n",
+       " ('mo.MusicGroup', 'SKMO_v2.4_0223.debutNation', 'schema.Country')]"
       ]
      },
      "execution_count": 5,
@@ -59,7 +61,7 @@
    ],
    "source": [
     "result = find_shortest_path(G, source_node, target_node)\n",
-    "result[::2]"
+    "result"
    ]
   },
   {
@@ -70,11 +72,10 @@
     {
      "data": {
       "text/plain": [
-       "['schema.MusicAlbum',\n",
-       " 'mo.Track',\n",
-       " 'mo.MusicGroup',\n",
-       " 'foaf.Person',\n",
-       " 'schema.Country']"
+       "[('schema.MusicAlbum', 'SKMO_v2.4_0223.hasTrack', 'mo.Track'),\n",
+       " ('mo.Track', 'SKMO_v2.4_0223.isSungBy', 'mo.MusicGroup'),\n",
+       " ('mo.MusicGroup', 'SKMO_v2.4_0223.hasLeader', 'foaf.Person'),\n",
+       " ('foaf.Person', 'schema.nationality', 'schema.Country')]"
       ]
      },
      "execution_count": 6,
@@ -84,7 +85,7 @@
    ],
    "source": [
     "result = find_shortest_path(G, source_node, target=target_node, p_name='schema.nationality')\n",
-    "result[::2]"
+    "result"
    ]
   },
   {
@@ -95,7 +96,8 @@
     {
      "data": {
       "text/plain": [
-       "['schema.MusicAlbum', 'foaf.Person', 'schema.Country']"
+       "[('schema.MusicAlbum', 'SKMO_v2.4_0223.hasSinger', 'foaf.Person'),\n",
+       " ('foaf.Person', 'schema.nationality', 'schema.Country')]"
       ]
      },
      "execution_count": 7,
@@ -105,28 +107,31 @@
    ],
    "source": [
     "result = find_shortest_path(G, source_node, target=target_node, p_name='schema.nationality', n_triple=3)\n",
-    "result[::2]"
+    "result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['mo.Track', 'mo.MusicGroup', 'foaf.Person', 'SKMO_v2.4_0223.MusicActivity']"
+       "[('schema.MusicAlbum', 'SKMO_v2.4_0223.hasTrack', 'mo.Track'),\n",
+       " ('mo.Track', 'SKMO_v2.4_0223.isSungBy', 'mo.MusicGroup'),\n",
+       " ('mo.MusicGroup', 'SKMO_v2.4_0223.hasLeader', 'foaf.Person'),\n",
+       " ('foaf.Person', 'schema.nationality', 'schema.Country')]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "result = find_shortest_path(G, source_node, p_name='SKMO_v2.4_0223.hasMusicActivity')\n",
-    "result[::2]"
+    "result = find_shortest_path(G, source_node, p_name='schema.nationality')\n",
+    "result"
    ]
   }
  ],
