--- a/notebooks/where_are_we_now.ipynb
+++ b/notebooks/where_are_we_now.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,20 +13,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "* Owlready2 * Warning: optimized Cython parser module 'owlready2_optimized' is not available, defaulting to slower Python implementation\n",
-      "\n",
-      "Warning: SQLite3 version 3.40.0 and 3.41.2 have huge performance regressions; please install version 3.41.1 or 3.42!\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import owlready2\n",
@@ -38,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +87,7 @@
        " ['용감한', '형제', '작곡', '노래', '장르']]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +124,7 @@
        "['용감한 형제', '작곡', '노래', '장르']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +159,7 @@
        "  SKMO_v2.4_0223.Genre)]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +191,7 @@
        "  (mo.Track, None, SKMO_v2.4_0223.Genre)]]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,18 +210,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "(SKMO_v2.4_0223.용감한_형제, SKMO_v2.4_0223.isComposedBy, mo.Track)의 shortest path\n",
+      ": 일치하는 shortest path가 없습니다.\n",
+      "\n",
       "(mo.Track, SKMO_v2.4_0223.hasGenre, None)의 shortest path\n",
-      "[('mo.Track', 'SKMO_v2.4_0223.hasGenre', 'SKMO_v2.4_0223.Genre')]\n",
+      ": [('mo.Track', 'SKMO_v2.4_0223.hasGenre', 'SKMO_v2.4_0223.Genre')]\n",
       "\n",
       "(mo.Track, None, SKMO_v2.4_0223.Genre)의 shortest path\n",
-      "[('mo.Track', 'SKMO_v2.4_0223.hasGenre', 'SKMO_v2.4_0223.Genre')]\n",
+      ": [('mo.Track', 'SKMO_v2.4_0223.hasGenre', 'SKMO_v2.4_0223.Genre')]\n",
       "\n"
      ]
     }
@@ -241,11 +233,15 @@
     "query_graph = query_graph_generation(G, conceptual_graph)\n",
     "\n",
     "for k,v in query_graph.items():\n",
-    "    if len(v) == 0: continue\n",
-    "    print(f'{k}의 shortest path')\n",
-    "    for elem in v:\n",
-    "        print(elem)\n",
-    "    print()"
+    "    if v == []:\n",
+    "        print(f'{k}의 shortest path')\n",
+    "        print(': 일치하는 shortest path가 없습니다.')\n",
+    "        print() \n",
+    "    else:\n",
+    "        print(f'{k}의 shortest path')\n",
+    "        for elem in v:\n",
+    "            print(f': {elem}')\n",
+    "        print()"
    ]
   }
  ],
