--- a/notebooks/index_generation.ipynb
+++ b/notebooks/index_generation.ipynb
@@ -20,12 +20,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "* Owlready2 * Warning: optimized Cython parser module 'owlready2_optimized' is not available, defaulting to slower Python implementation\n"
+      "* Owlready2 * Warning: optimized Cython parser module 'owlready2_optimized' is not available, defaulting to slower Python implementation\n",
+      "\n",
+      "Warning: SQLite3 version 3.40.0 and 3.41.2 have huge performance regressions; please install version 3.41.1 or 3.42!\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "from owlready2 import get_ontology\n",
+    "from owlready2 import *\n",
     "import pandas as pd\n",
     "from elasticsearch import Elasticsearch"
    ]
@@ -46,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,158 +61,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "index_list = []\n",
-    "index_list.extend([(r.iri, \"T_c\", r.label) for r in onto.classes()])\n",
-    "index_list.extend([(r.iri, \"T_op\", r.label) for r in onto.object_properties()])\n",
-    "index_list.extend([(r.iri, \"T_dp\", r.label) for r in onto.data_properties()])\n",
-    "index_list.extend([(r.iri, \"T_i\", r.label) for r in onto.individuals()])\n",
+    "def change_prefix(s):\n",
+    "    s = str(s)\n",
+    "    s_list = s.rsplit('.',1) \n",
     "\n",
-    "# for r in onto.individuals():\n",
-    "#     annotation_values = [*r.label]\n",
-    "#     for p in r.get_properties():\n",
-    "#         if p._name in ['realName', 'name', 'title']:\n",
-    "#             av = getattr(r, p._name)\n",
-    "#             if av in annotation_values: continue\n",
-    "#             annotation_values.append(av)\n",
-    "#     index_list.append((r.iri, \"T_i\", annotation_values))"
+    "    if s_list[0] == config['owl']['path'][:-4]:\n",
+    "        s = 'skmo:' + s_list[-1]\n",
+    "    else:\n",
+    "        s = s_list[0] + ':' + s_list[-1]\n",
+    "    return s"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>URI</th>\n",
-       "      <th>Type</th>\n",
-       "      <th>Annotation Values</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>http://schema.org/MusicAlbum</td>\n",
-       "      <td>T_c</td>\n",
-       "      <td>[앨범, 음악 앨범]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>http://xmlns.com/foaf/0.1/Organization</td>\n",
-       "      <td>T_c</td>\n",
-       "      <td>[연예기획사, 기관, 조직, 회사]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>http://xmlns.com/foaf/0.1/Person</td>\n",
-       "      <td>T_c</td>\n",
-       "      <td>[인물, 사람]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>http://www.sktelecom.com/skmo/Language</td>\n",
-       "      <td>T_c</td>\n",
-       "      <td>[언어]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>http://purl.org/ontology/mo/Track</td>\n",
-       "      <td>T_c</td>\n",
-       "      <td>[곡, 노래, 수록곡]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>549</th>\n",
-       "      <td>http://www.sktelecom.com/timeUnit#7일</td>\n",
-       "      <td>T_i</td>\n",
-       "      <td>[7일, 칠일]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>550</th>\n",
-       "      <td>http://www.sktelecom.com/timeUnit#8월</td>\n",
-       "      <td>T_i</td>\n",
-       "      <td>[팔월, 8월]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>551</th>\n",
-       "      <td>http://www.sktelecom.com/timeUnit#8일</td>\n",
-       "      <td>T_i</td>\n",
-       "      <td>[팔일, 8일]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>552</th>\n",
-       "      <td>http://www.sktelecom.com/timeUnit#9월</td>\n",
-       "      <td>T_i</td>\n",
-       "      <td>[구월, 9월]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>553</th>\n",
-       "      <td>http://www.sktelecom.com/timeUnit#9일</td>\n",
-       "      <td>T_i</td>\n",
-       "      <td>[구일, 9일]</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>554 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                        URI Type    Annotation Values\n",
-       "0              http://schema.org/MusicAlbum  T_c          [앨범, 음악 앨범]\n",
-       "1    http://xmlns.com/foaf/0.1/Organization  T_c  [연예기획사, 기관, 조직, 회사]\n",
-       "2          http://xmlns.com/foaf/0.1/Person  T_c             [인물, 사람]\n",
-       "3    http://www.sktelecom.com/skmo/Language  T_c                 [언어]\n",
-       "4         http://purl.org/ontology/mo/Track  T_c         [곡, 노래, 수록곡]\n",
-       "..                                      ...  ...                  ...\n",
-       "549    http://www.sktelecom.com/timeUnit#7일  T_i             [7일, 칠일]\n",
-       "550    http://www.sktelecom.com/timeUnit#8월  T_i             [팔월, 8월]\n",
-       "551    http://www.sktelecom.com/timeUnit#8일  T_i             [팔일, 8일]\n",
-       "552    http://www.sktelecom.com/timeUnit#9월  T_i             [구월, 9월]\n",
-       "553    http://www.sktelecom.com/timeUnit#9일  T_i             [구일, 9일]\n",
-       "\n",
-       "[554 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df = pd.DataFrame(index_list, columns=['URI', 'Type', 'Annotation Values'])\n",
-    "\n",
-    "# Remain only resources with annotation values\n",
-    "cond = df[\"Annotation Values\"].apply(len) != 0\n",
-    "df = df[cond].reset_index(drop=True)\n",
-    "df"
+    "index_list = []\n",
+    "index_list.extend([(change_prefix(r), \"T_c\", r.label) for r in onto.classes()])\n",
+    "index_list.extend([(change_prefix(r), \"T_op\", r.label) for r in onto.object_properties()])\n",
+    "index_list.extend([(change_prefix(r), \"T_dp\", r.label) for r in onto.data_properties()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "instance_list = []\n",
+    "for r in onto.individuals():\n",
+    "    if r.is_a[0] == Thing:  continue\n",
+    "    tbox = [change_prefix(t) for t in r.is_a]\n",
+    "    instance_list.append((change_prefix(r), \"T_i\", r.label, tbox))"
    ]
   },
   {
@@ -237,8 +126,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(len(df)) :\n",
-    "    doc = {'Annotation Values':df[\"Annotation Values\"][i],}\n",
+    "for row in index_list:\n",
+    "    doc = {'URI':row[0], 'Type':row[1], 'Annotation Values':row[2]}\n",
     "    es.index(index=index_name, body=doc)"
    ]
   },
@@ -246,29 +135,11 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'took': 55,\n",
-       " 'timed_out': False,\n",
-       " '_shards': {'total': 1, 'successful': 1, 'skipped': 0, 'failed': 0},\n",
-       " 'hits': {'total': {'value': 1, 'relation': 'eq'},\n",
-       "  'max_score': 7.171753,\n",
-       "  'hits': [{'_index': 'skmo',\n",
-       "    '_id': 'D2tynIoB6175Wi5vE2PB',\n",
-       "    '_score': 7.171753,\n",
-       "    '_source': {'Annotation Values': ['곡', '노래', '수록곡']}}]}}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "search_query = {\"query\":{\"term\":{\"Annotation Values.keyword\": \"노래\"}}}\n",
-    "es.search(index=index_name, body=search_query)"
+    "for row in instance_list:\n",
+    "    doc = {'URI':row[0], 'Type':row[1], 'Annotation Values':row[2], 'Tbox':row[3]}\n",
+    "    es.index(index=index_name, body=doc)"
    ]
   }
  ],
