--- a/notebooks/resource_mapping.ipynb
+++ b/notebooks/resource_mapping.ipynb
@@ -28,10 +28,11 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import owlready2\n",
-    "from map import ResourceMapper\n",
-    "from graph import *"
+    "import numpy as np\n",
+    "import itertools\n",
+    "from owlready2 import get_ontology\n",
+    "from elasticsearch import Elasticsearch\n",
+    "from konlpy.tag import Okt"
    ]
   },
   {
@@ -40,24 +41,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Read config file\n",
     "config = config_read('../')\n",
-    "rm = ResourceMapper(config)\n",
-    "cgg = ConceptualGraphGenerator(config)\n",
-    "qgg = QueryGraphGenerator(config)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 1. Preprocessing"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 2-1. Query Partitioning"
+    "\n",
+    "data_path = config['owl']['path']\n",
+    "onto = get_ontology(data_path).load()\n",
+    "\n",
+    "# Elasticsearch\n",
+    "server_ip = config['elasticsearch']['ip']\n",
+    "index_name = config['elasticsearch']['name']\n",
+    "es = Elasticsearch(server_ip)\n",
+    "\n",
+    "# OKT\n",
+    "okt = Okt()"
    ]
   },
   {
@@ -77,10 +73,9 @@
     }
    ],
    "source": [
-    "# This Love 부른 음악가의 소속 음악 그룹은?\n",
-    "# 용감한 형제가 작곡한 노래의 장르는?\n",
-    "user_query = '용감한 형제가 작곡한 노래의 장르는?'\n",
-    "query_terms = rm.tokenize_query(user_query)\n",
+    "user_input = input(\"Question: \")\n",
+    "query_pos = okt.pos(user_input, norm=True)\n",
+    "query_terms = [q[0] for q in query_pos if q[1] not in [\"Josa\", \"Punctuation\"]]\n",
     "query_terms"
    ]
   },
@@ -116,15 +111,21 @@
     }
    ],
    "source": [
-    "query_patitions = rm.partition_query(query_terms)\n",
+    "query_patitions = [[\" \".join(query_terms)]]\n",
+    "\n",
+    "for slice_num in range(1,len(query_terms)):\n",
+    "    for slice_list in itertools.combinations(range(len(query_terms)-1), slice_num):\n",
+    "        qp = []\n",
+    "        qp.append(\" \".join(query_terms[:slice_list[0]+1]))\n",
+    "        \n",
+    "        for s_i, slice_idx in enumerate(slice_list):\n",
+    "            if s_i == len(slice_list) - 1 : break\n",
+    "            qp.append(\" \".join(query_terms[slice_idx+1:slice_list[s_i+1]+1]))\n",
+    "\n",
+    "        qp.append(\" \".join(query_terms[slice_list[-1]+1:]))\n",
+    "        query_patitions.append(qp)\n",
+    "    \n",
     "query_patitions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 2-2. Partition Scoring"
    ]
   },
   {
@@ -133,26 +134,30 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['용감한 형제', '작곡', '노래', '장르']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['용감한 형제', '작곡', '노래', '장르']\n",
+      "[0.0, 0.0, 3.58557035, 0.0, 3.2757437, 0.0, 0.0, 2.1838291333333335, 4.780760466666666, 4.5742093666666666, 4.5742093666666666, 1.792785175, 1.63787185, 3.430657025, 7.016227375, 4.17875376]\n"
+     ]
     }
    ],
    "source": [
-    "p_star, score_list = rm.score_partition(query_patitions)\n",
-    "p_star"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 2-3. Generation of resource combination"
+    "score_list = []\n",
+    "\n",
+    "for qp in query_patitions:\n",
+    "    score = 0\n",
+    "    for q in qp:\n",
+    "        search_query = {\"query\":{\"term\":{\"Annotation Values.keyword\": q}}}\n",
+    "        result = es.search(index=index_name, body=search_query)\n",
+    "        if result['hits']['max_score'] :\n",
+    "            score += result['hits']['max_score']\n",
+    "    score_list.append(score/len(qp))\n",
+    "\n",
+    "p_star = query_patitions[np.argmax(score_list)]\n",
+    "\n",
+    "print(p_star)\n",
+    "print(score_list)"
    ]
   },
   {
@@ -173,79 +178,18 @@
     }
    ],
    "source": [
-    "resource_combinations = rm.combinate_resource(p_star)\n",
+    "candidates_list = []\n",
+    "\n",
+    "for token in p_star:\n",
+    "    search_query = {\"query\":{\"term\":{\"Annotation Values.keyword\": token}}}\n",
+    "    result = es.search(index=index_name, body=search_query)\n",
+    "    candidates = []\n",
+    "    for res in result['hits']['hits']:\n",
+    "        candidates.append(res['_source']['URI'])\n",
+    "    candidates_list.append(candidates)\n",
+    "\n",
+    "resource_combinations = list(itertools.product(*candidates_list))\n",
     "resource_combinations"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 3. Conceptual graph generation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[('skmo:용감한_형제', 'skmo:isComposedBy', 'mo:Track'),\n",
-       "  ('mo:Track', 'Any P', 'skmo:Genre')],\n",
-       " [('skmo:용감한_형제', 'skmo:isComposedBy', 'mo:Track'),\n",
-       "  ('mo:Track', 'skmo:hasGenre', 'owl:Thing')]]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "conceptual_graph = cgg.generate_conceptual_graph(resource_combinations)\n",
-    "conceptual_graph"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 4. Query graph generation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(0.25,\n",
-       "  [[('foaf:Person', 'foaf:name', 'Literal_foaf:name'),\n",
-       "    ('Literal_foaf:name', 'foaf:name', 'foaf:Organization'),\n",
-       "    ('foaf:Organization', 'skmo:isComposedBy', 'mo:Track')],\n",
-       "   [('mo:Track', 'dc:title', 'Literal_dc:title'),\n",
-       "    ('Literal_dc:title', 'dc:title', 'schema:MusicAlbum'),\n",
-       "    ('schema:MusicAlbum', 'skmo:hasGenre', 'skmo:Genre')]]),\n",
-       " (0.25,\n",
-       "  [[('foaf:Person', 'foaf:name', 'Literal_foaf:name'),\n",
-       "    ('Literal_foaf:name', 'foaf:name', 'foaf:Organization'),\n",
-       "    ('foaf:Organization', 'skmo:isComposedBy', 'mo:Track')],\n",
-       "   [('mo:Track', 'rdfs:subClassOf', 'skmo:Instrumental'),\n",
-       "    ('skmo:Instrumental', 'skmo:hasGenre', 'skmo:Genre')]])]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "query_graph = qgg.generate_query_graph(conceptual_graph)\n",
-    "query_graph"
    ]
   }
  ],
@@ -266,8 +210,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.16"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
