--- a/notebooks/shortest_path_finding.ipynb
+++ b/notebooks/shortest_path_finding.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append('../')\n",
-    "from graph import *\n",
+    "from heapq import heappop, heappush\n",
+    "import itertools\n",
+    "import networkx as nx\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,113 +24,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "G = base_graph_generation(unit_path)"
+    "G = nx.MultiGraph()\n",
+    "\n",
+    "for _, row in unit_path.iterrows():\n",
+    "    source = row['domain']  \n",
+    "    target = row['range']   \n",
+    "    edge = row['P']         \n",
+    "    weight = row['W']       \n",
+    "\n",
+    "    G.add_node(source)        \n",
+    "    G.add_node(target)\n",
+    "        \n",
+    "    G.add_edge(source, target, property=edge, weight=weight, label=edge)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "source_node = 'schema.MusicAlbum'\n",
-    "target_node = 'schema.Country'"
+    "source_node = 'mo.Track'\n",
+    "target_node = 'SKMO_v2.4_0223.MusicActivity'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_shortest_path(G, source, target, p_name=None, n_triple=None, weight=False):\n",
+    "    push = heappush\n",
+    "    pop = heappop\n",
+    "    \n",
+    "    c = itertools.count()\n",
+    "    fringe = []\n",
+    "    path = [source]\n",
+    "    result = []\n",
+    "    global_dist = float('inf')\n",
+    "\n",
+    "    if n_triple is None:\n",
+    "        n_triple = len(G.nodes)\n",
+    "\n",
+    "    if source == target:\n",
+    "        return result\n",
+    "    \n",
+    "    push(fringe, (0, next(c), source, path))\n",
+    "\n",
+    "    while fringe:\n",
+    "        (d, loop, v, path) = pop(fringe)\n",
+    "\n",
+    "        if len(path)//2 >= n_triple:\n",
+    "            continue\n",
+    "    \n",
+    "        if target == path[-1]:\n",
+    "            if d > global_dist:\n",
+    "                continue\n",
+    "            if p_name is None or p_name in path:\n",
+    "                result.append((d,path))\n",
+    "                global_dist = d\n",
+    "            continue\n",
+    "        \n",
+    "\n",
+    "        for u, edges in G._adj[v].items():\n",
+    "            if u in path:\n",
+    "                continue\n",
+    "            for _, e in edges.items():\n",
+    "                if weight: cost = e['weight'] \n",
+    "                else: cost = 1\n",
+    "                vu_dist = d + cost\n",
+    "\n",
+    "                if vu_dist > global_dist:\n",
+    "                    continue\n",
+    "\n",
+    "                new_path = list()\n",
+    "                new_path += path\n",
+    "                new_path += [e['property'], u]\n",
+    "\n",
+    "                push(fringe, (vu_dist, next(c), u, new_path))\n",
+    "    \n",
+    "    if len(result) == 0:\n",
+    "        return result\n",
+    "    \n",
+    "    # return result\n",
+    "\n",
+    "    score = sorted(result)[0][0]\n",
+    "    shortest_path = sorted(result)[0][1]\n",
+    "    shortest_path = [tuple(shortest_path[offset:offset+3]) for offset in range(0, len(shortest_path)-2, 2)]\n",
+    "    return score, shortest_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('schema.MusicAlbum', 'SKMO_v2.4_0223.hasTrack', 'mo.Track'),\n",
-       " ('mo.Track', 'SKMO_v2.4_0223.isSungBy', 'mo.MusicGroup'),\n",
-       " ('mo.MusicGroup', 'SKMO_v2.4_0223.debutNation', 'schema.Country')]"
+       "[('mo.Track', 'SKMO_v2.4_0223.debutTrack', 'SKMO_v2.4_0223.MusicArtist'),\n",
+       " ('SKMO_v2.4_0223.MusicArtist',\n",
+       "  'SKMO_v2.4_0223.hasMusicActivity',\n",
+       "  'SKMO_v2.4_0223.MusicActivity')]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "result = find_shortest_path(G, source_node, target_node)\n",
-    "result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('schema.MusicAlbum', 'SKMO_v2.4_0223.hasTrack', 'mo.Track'),\n",
-       " ('mo.Track', 'SKMO_v2.4_0223.isSungBy', 'mo.MusicGroup'),\n",
-       " ('mo.MusicGroup', 'SKMO_v2.4_0223.hasLeader', 'foaf.Person'),\n",
-       " ('foaf.Person', 'schema.nationality', 'schema.Country')]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "result = find_shortest_path(G, source_node, target=target_node, p_name='schema.nationality')\n",
-    "result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('schema.MusicAlbum', 'SKMO_v2.4_0223.hasSinger', 'foaf.Person'),\n",
-       " ('foaf.Person', 'schema.nationality', 'schema.Country')]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "result = find_shortest_path(G, source_node, target=target_node, p_name='schema.nationality', n_triple=3)\n",
-    "result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('schema.MusicAlbum', 'SKMO_v2.4_0223.hasTrack', 'mo.Track'),\n",
-       " ('mo.Track', 'SKMO_v2.4_0223.isSungBy', 'mo.MusicGroup'),\n",
-       " ('mo.MusicGroup', 'SKMO_v2.4_0223.hasLeader', 'foaf.Person'),\n",
-       " ('foaf.Person', 'schema.nationality', 'schema.Country')]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "result = find_shortest_path(G, source_node, p_name='schema.nationality')\n",
+    "score, result = find_shortest_path(G, source_node, target_node, weight=False)\n",
     "result"
    ]
   }
