--- a/notebooks/conceptual_graph_generation.ipynb
+++ b/notebooks/conceptual_graph_generation.ipynb
@@ -30,8 +30,10 @@
    "source": [
     "import pandas as pd\n",
     "import owlready2\n",
-    "from map import ResourceMapper\n",
-    "from elasticsearch import Elasticsearch"
+    "from mapping import ResourceMapper\n",
+    "from elasticsearch import Elasticsearch\n",
+    "from graph import QueryGraphGenerator\n",
+    "import itertools"
    ]
   },
   {
@@ -51,17 +53,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "user_input = '용감한 형제가 작곡한 노래의 장르는?'\n",
+    "# user_input = '용감한 형제가 작곡한 노래의 장르는?'\n",
+    "user_input = '뱅뱅뱅 부른 음악그룹의 소속사'\n",
     "resource_combinations = rm.process(user_input)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,56 +76,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[('skmo:용감한_형제', 'skmo:isComposedBy', 'mo:Track'),\n",
-       "  ('mo:Track', 'Any P', 'skmo:Genre')],\n",
-       " [('skmo:용감한_형제', 'skmo:isComposedBy', 'mo:Track'),\n",
-       "  ('mo:Track', 'skmo:hasGenre', 'owl:Thing')]]"
+       "[[('skmo:뱅뱅뱅', 'skmo:isSungBy', 'mo:MusicGroup'),\n",
+       "  ('mo:MusicGroup', 'schema:affiliation', 'owl:Thing')],\n",
+       " [('skmo:뱅뱅뱅', 'skmo:isSungBy', 'owl:Thing'),\n",
+       "  ('mo:MusicGroup', 'schema:affiliation', 'owl:Thing')],\n",
+       " [('skmo:뱅뱅뱅', 'schema:affiliation', 'owl:Thing'),\n",
+       "  ('mo:MusicGroup', 'schema:affiliation', 'owl:Thing')],\n",
+       " [('skmo:뱅뱅뱅_inst', 'skmo:isSungBy', 'mo:MusicGroup'),\n",
+       "  ('mo:MusicGroup', 'schema:affiliation', 'owl:Thing')],\n",
+       " [('skmo:뱅뱅뱅_inst', 'skmo:isSungBy', 'owl:Thing'),\n",
+       "  ('mo:MusicGroup', 'schema:affiliation', 'owl:Thing')],\n",
+       " [('skmo:뱅뱅뱅_inst', 'schema:affiliation', 'owl:Thing'),\n",
+       "  ('mo:MusicGroup', 'schema:affiliation', 'owl:Thing')],\n",
+       " [('skmo:뱅뱅뱅_황치열', 'skmo:isSungBy', 'mo:MusicGroup'),\n",
+       "  ('mo:MusicGroup', 'schema:affiliation', 'owl:Thing')],\n",
+       " [('skmo:뱅뱅뱅_황치열', 'skmo:isSungBy', 'owl:Thing'),\n",
+       "  ('mo:MusicGroup', 'schema:affiliation', 'owl:Thing')],\n",
+       " [('skmo:뱅뱅뱅_황치열', 'schema:affiliation', 'owl:Thing'),\n",
+       "  ('mo:MusicGroup', 'schema:affiliation', 'owl:Thing')]]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "conceptual_graph = []\n",
-    "\n",
     "for rc in resource_combinations:\n",
-    "    conceptual_arc = []\n",
-    "    state_list = []\n",
-    "    rc = list(rc)\n",
-    "\n",
-    "    for r in rc:\n",
-    "        r_type = get_type(r)\n",
-    "        if r_type in ['T_dp', 'T_op']:\n",
-    "            state_list.append('edge') \n",
-    "        else:\n",
-    "            state_list.append('vertex') \n",
-    "\n",
-    "    # 마지막이 edge일 때\n",
-    "    if state_list[-1] == 'edge':\n",
-    "        state_list.append('vertex')\n",
+    "    # rightmost element is an edge\n",
+    "    if get_type(rc[-1]) in ['T_dp', 'T_op']:\n",
+    "        rc = list(rc)\n",
     "        rc.append('owl:Thing')\n",
     "\n",
-    "    # vertex - vertex 일때\n",
-    "    index_list = []\n",
-    "    for i in range(len(state_list)-1):\n",
-    "        if state_list[i] == 'vertex' and state_list[i+1] == 'vertex':\n",
-    "            index_list.append(i+1)\n",
+    "    conceptual_arc_list = []\n",
+    "\n",
+    "    for i in range(len(rc)-1):\n",
+    "        conceptual_arc = []\n",
+    "        s_type = get_type(rc[i])\n",
+    "\n",
+    "        if s_type in ['T_dp', 'T_op']:\n",
+    "            continue\n",
+    "        \n",
+    "        p_list = []\n",
+    "        for j in range(i+1, len(rc)):\n",
+    "            o_type = get_type(rc[j])\n",
+    "            if o_type in ['T_dp', 'T_op']:\n",
+    "                p_list.append(rc[j])\n",
+    "            elif s_type == 'T_i' and o_type == 'T_i':\n",
+    "                continue\n",
+    "            else:\n",
+    "                if len(p_list) == 0:\n",
+    "                    conceptual_arc.append((rc[i],'Any P',rc[j]))\n",
+    "                else:\n",
+    "                    for p in p_list:\n",
+    "                        conceptual_arc.append((rc[i], p, rc[j]))\n",
+    "        conceptual_arc_list.append(conceptual_arc)\n",
     "    \n",
-    "    for i in index_list:\n",
-    "        state_list.insert(i, 'edge')\n",
-    "        rc.insert(i, 'Any P')\n",
-    "    \n",
-    "    for offset in range(0,len(rc)-2, 2):\n",
-    "        conceptual_arc.append(tuple(rc[offset:offset+3]))\n",
-    "    \n",
+    "    for cg in list(itertools.product(*conceptual_arc_list)):\n",
+    "        conceptual_graph.append(list(cg))\n",
+    "\n",
+    "conceptual_graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[('skmo:뱅뱅뱅', 'skmo:isSungBy', 'mo:MusicGroup'),\n",
+       "  ('mo:MusicGroup', 'schema:affiliation', 'owl:Thing')],\n",
+       " [('skmo:뱅뱅뱅_inst', 'skmo:isSungBy', 'mo:MusicGroup'),\n",
+       "  ('mo:MusicGroup', 'schema:affiliation', 'owl:Thing')],\n",
+       " [('skmo:뱅뱅뱅_황치열', 'skmo:isSungBy', 'mo:MusicGroup'),\n",
+       "  ('mo:MusicGroup', 'schema:affiliation', 'owl:Thing')]]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conceptual_graph = []\n",
+    "for rc in resource_combinations:\n",
+    "    # rightmost element is an edge\n",
+    "    if get_type(rc[-1]) in ['T_dp', 'T_op']:\n",
+    "        rc = list(rc)\n",
+    "        rc.append('owl:Thing')\n",
+    "        \n",
+    "    conceptual_arc = []\n",
+    "    for i in range(len(rc)-1):\n",
+    "        s_type = get_type(rc[i])\n",
+    "\n",
+    "        if s_type in ['T_dp', 'T_op']:\n",
+    "            continue\n",
+    "        \n",
+    "        p = 'Any P'\n",
+    "        for j in range(i+1, len(rc)):\n",
+    "            o_type = get_type(rc[j])\n",
+    "            if o_type in ['T_dp', 'T_op']:\n",
+    "                p = rc[j]\n",
+    "            elif s_type == 'T_i' and o_type == 'T_i':\n",
+    "                break\n",
+    "            else:\n",
+    "                conceptual_arc.append((rc[i],p,rc[j]))\n",
+    "                break\n",
     "    conceptual_graph.append(conceptual_arc)\n",
     "\n",
     "conceptual_graph"
