--- a/notebooks/index_generation.ipynb
+++ b/notebooks/index_generation.ipynb
@@ -69,8 +69,8 @@
     "    s = str(s)\n",
     "    s_list = s.rsplit('.',1) \n",
     "\n",
-    "    if s_list[0] == config['owl']['path'][:-4]:\n",
-    "        s = 'skmo:' + s_list[-1]\n",
+    "    if data_path[:-3] in s:\n",
+    "        s = s.replace(data_path[:-3],'skmo:')\n",
     "    else:\n",
     "        s = s_list[0] + ':' + s_list[-1]\n",
     "    return s"
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -118,6 +118,33 @@
     "if es.indices.exists(index=index_name):\n",
     "    es.indices.delete(index=index_name,ignore=[400, 404])\n",
     "    print('Index has been deleted successfully')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_index': 'skmo',\n",
+       " '_id': '5G0eMosBDCkSKGCE7srI',\n",
+       " '_version': 1,\n",
+       " 'result': 'created',\n",
+       " '_shards': {'total': 2, 'successful': 1, 'failed': 0},\n",
+       " '_seq_no': 0,\n",
+       " '_primary_term': 1}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "doc = {'URI':'owl:Thing', 'Type':'T_c'}\n",
+    "es.index(index=index_name, body=doc)"
    ]
   },
   {
