--- a/notebooks/pipeline.ipynb
+++ b/notebooks/pipeline.ipynb
@@ -28,10 +28,9 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import owlready2\n",
-    "from map import ResourceMapper\n",
-    "from graph import *"
+    "from mapping import ResourceMapper\n",
+    "from graph import *\n",
+    "from sparql import SPAQLConverter"
    ]
   },
   {
@@ -43,7 +42,8 @@
     "config = config_read('../')\n",
     "rm = ResourceMapper(config)\n",
     "cgg = ConceptualGraphGenerator(config)\n",
-    "qgg = QueryGraphGenerator(config)"
+    "qgg = QueryGraphGenerator(config)\n",
+    "sc = SPAQLConverter(config)"
    ]
   },
   {
@@ -77,9 +77,9 @@
     }
    ],
    "source": [
-    "# This Love 부른 음악가의 소속 음악 그룹은?\n",
-    "# 용감한 형제가 작곡한 노래의 장르는?\n",
     "user_query = '용감한 형제가 작곡한 노래의 장르는?'\n",
+    "# user_query = '뱅뱅뱅 부른 음악그룹의 소속사는?'\n",
+    "# user_query = 'This Love 부른 음악가의 소속 음악 그룹은?'\n",
     "query_terms = rm.tokenize_query(user_query)\n",
     "query_terms"
    ]
@@ -223,19 +223,13 @@
     {
      "data": {
       "text/plain": [
-       "[(0.25,\n",
-       "  [[('foaf:Person', 'foaf:name', 'Literal_foaf:name'),\n",
-       "    ('Literal_foaf:name', 'foaf:name', 'foaf:Organization'),\n",
-       "    ('foaf:Organization', 'skmo:isComposedBy', 'mo:Track')],\n",
-       "   [('mo:Track', 'dc:title', 'Literal_dc:title'),\n",
-       "    ('Literal_dc:title', 'dc:title', 'schema:MusicAlbum'),\n",
-       "    ('schema:MusicAlbum', 'skmo:hasGenre', 'skmo:Genre')]]),\n",
-       " (0.25,\n",
-       "  [[('foaf:Person', 'foaf:name', 'Literal_foaf:name'),\n",
-       "    ('Literal_foaf:name', 'foaf:name', 'foaf:Organization'),\n",
-       "    ('foaf:Organization', 'skmo:isComposedBy', 'mo:Track')],\n",
-       "   [('mo:Track', 'rdfs:subClassOf', 'skmo:Instrumental'),\n",
-       "    ('skmo:Instrumental', 'skmo:hasGenre', 'skmo:Genre')]])]"
+       "[(0.7517241379310344,\n",
+       "  [('mo:Track', 'skmo:isComposedBy', 'foaf:Person(skmo:용감한_형제)'),\n",
+       "   ('mo:Track', 'skmo:hasGenre', 'skmo:Genre')]),\n",
+       " (0.7517241379310344,\n",
+       "  [('mo:Track', 'skmo:isComposedBy', 'foaf:Person(skmo:용감한_형제)'),\n",
+       "   ('mo:Track', 'skmo:hasGenre', 'skmo:Genre'),\n",
+       "   ('skmo:Genre', 'rdfs:subClassOf', 'owl:Thing')])]"
       ]
      },
      "execution_count": 9,
@@ -246,6 +240,42 @@
    "source": [
     "query_graph = qgg.generate_query_graph(conceptual_graph)\n",
     "query_graph"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 5. SPARQL Conversion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SELECT DISTINCT ?target \n",
+      "WHERE\n",
+      "{\n",
+      "    ?x0 skmo:isComposedBy skmo:용감한_형제; skmo:hasGenre ?target\n",
+      "}\n",
+      "http://www.sktelecom.com/skmo/k-pop\n",
+      "http://www.sktelecom.com/skmo/R&B\n",
+      "http://www.sktelecom.com/skmo/hip_hop\n"
+     ]
+    }
+   ],
+   "source": [
+    "knows_query = sc.generate_query(query_graph)\n",
+    "print(knows_query)\n",
+    "\n",
+    "result = sc.excute_query(knows_query)\n",
+    "for r in result:\n",
+    "    print(r['target'])"
    ]
   }
  ],
