--- a/notebooks/query_graph_generation.ipynb
+++ b/notebooks/query_graph_generation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,20 +13,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "* Owlready2 * Warning: optimized Cython parser module 'owlready2_optimized' is not available, defaulting to slower Python implementation\n",
+      "\n",
+      "Warning: SQLite3 version 3.40.0 and 3.41.2 have huge performance regressions; please install version 3.41.1 or 3.42!\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from elasticsearch import Elasticsearch\n",
     "import pandas as pd\n",
     "from path import *\n",
     "from graph import ConceptualGraphGenerator\n",
-    "from map import ResourceMapper"
+    "from mapping import ResourceMapper"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,19 +58,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# user_input = '뱅뱅뱅 부른 빅뱅 소속사는?'\n",
-    "user_input = '용감한 형제가 작곡한 노래의 장르는?'\n",
+    "user_input = '뱅뱅뱅 부른 음악그룹 소속사는?'\n",
+    "# user_input = '용감한 형제가 작곡한 노래의 장르는?'\n",
     "resource_combinations = rm.process(user_input)\n",
     "conceptual_graph = cgg.generate_conceptual_graph(resource_combinations)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,17 +93,16 @@
     "    for ca in cg:\n",
     "        if ca in ca2sp: \n",
     "            continue\n",
-    "        else:\n",
-    "            ca2sp[ca] = []\n",
     "\n",
+    "        ca2sp[ca] = []\n",
     "        d,p,r = ca\n",
     "\n",
     "        # Restict search space to Tbox level\n",
-    "        if not G.has_node(str(d)):\n",
+    "        if not G.has_node(d):\n",
     "            d = get_tbox(d)\n",
     "        else: d = [d]\n",
     "\n",
-    "        if not G.has_node(str(r)):\n",
+    "        if not G.has_node(r):\n",
     "            r = get_tbox(r)\n",
     "        else: r = [r]\n",
     "\n",
@@ -100,16 +110,36 @@
     "\n",
     "        # Find shortest path\n",
     "        for u,e,v in itertools.product(d,p,r):\n",
+    "            \n",
     "            if e == 'Any P': e=None\n",
     "\n",
-    "            score, result = find_shortest_path(G, u, v, e, weight=False) \n",
+    "            forward_result = find_shortest_path(G, u, v, e, weight=True)\n",
+    "            backward_result = find_shortest_path(G, v, u, e, weight=True)\n",
+    "\n",
+    "            if forward_result[0] <= backward_result[0]:\n",
+    "                score, result = forward_result\n",
+    "                abox = ca[0], ca[-1]\n",
+    "            else:\n",
+    "                score, result = backward_result\n",
+    "                abox = ca[-1], ca[0]\n",
+    "\n",
+    "\n",
     "            if len(result) == 0: continue\n",
+    "\n",
+    "            # 앞이 instance일 경우\n",
+    "            if result[0][0] != abox[0]:\n",
+    "                result[0] = (result[0][0] + '('+abox[0]+')', result[0][1], result[0][2])\n",
+    "            \n",
+    "            # 뒤가 instance일 경우\n",
+    "            if result[-1][-1] != abox[1]:\n",
+    "                result[-1] = (result[-1][0], result[-1][1], result[-1][2] + '('+abox[1]+')')\n",
+    "            \n",
     "            ca2sp[ca].append((score,result))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -117,14 +147,17 @@
      "output_type": "stream",
      "text": [
       "----------------------------------------------------------------------------------------------------\n",
-      "('skmo:용감한_형제', 'skmo:isComposedBy', 'mo:Track')의 shortest path : \n",
-      "[('foaf:Person', 'skmo:isComposedBy', 'mo:Track')]\n",
+      "('skmo:뱅뱅뱅', 'skmo:isSungBy', 'mo:MusicGroup')의 shortest path : \n",
+      "[('mo:Track(skmo:뱅뱅뱅)', 'skmo:isSungBy', 'mo:MusicGroup')]\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "('mo:Track', 'Any P', 'skmo:Genre')의 shortest path : \n",
-      "[('mo:Track', 'skmo:hasGenre', 'skmo:Genre')]\n",
+      "('mo:MusicGroup', 'schema:affiliation', 'owl:Thing')의 shortest path : \n",
+      "[('mo:MusicGroup', 'schema:affiliation', 'foaf:Organization'), ('foaf:Organization', 'rdfs:subClassOf', 'owl:Thing')]\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "('mo:Track', 'skmo:hasGenre', 'owl:Thing')의 shortest path : \n",
-      "[('mo:Track', 'skmo:hasGenre', 'skmo:Genre'), ('skmo:Genre', 'rdfs:subClassOf', 'owl:Thing')]\n",
+      "('skmo:뱅뱅뱅_inst', 'skmo:isSungBy', 'mo:MusicGroup')의 shortest path : \n",
+      "[('skmo:Instrumental(skmo:뱅뱅뱅_inst)', 'skmo:isSungBy', 'mo:MusicGroup')]\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "('skmo:뱅뱅뱅_황치열', 'skmo:isSungBy', 'mo:MusicGroup')의 shortest path : \n",
+      "[('mo:Track(skmo:뱅뱅뱅_황치열)', 'skmo:isSungBy', 'mo:MusicGroup')]\n",
       "----------------------------------------------------------------------------------------------------\n"
      ]
     }
@@ -147,17 +180,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2 [[('foaf:Person', 'skmo:isComposedBy', 'mo:Track')], [('mo:Track', 'skmo:hasGenre', 'skmo:Genre')]]\n",
-      "3 [[('foaf:Person', 'skmo:isComposedBy', 'mo:Track')], [('mo:Track', 'skmo:hasGenre', 'skmo:Genre'), ('skmo:Genre', 'rdfs:subClassOf', 'owl:Thing')]]\n",
+      "[('mo:Track(skmo:뱅뱅뱅)', 'skmo:isSungBy', 'mo:MusicGroup'), ('mo:MusicGroup', 'schema:affiliation', 'foaf:Organization'), ('foaf:Organization', 'rdfs:subClassOf', 'owl:Thing')]\n",
+      "[('skmo:Instrumental(skmo:뱅뱅뱅_inst)', 'skmo:isSungBy', 'mo:MusicGroup'), ('mo:MusicGroup', 'schema:affiliation', 'foaf:Organization'), ('foaf:Organization', 'rdfs:subClassOf', 'owl:Thing')]\n",
+      "[('mo:Track(skmo:뱅뱅뱅_황치열)', 'skmo:isSungBy', 'mo:MusicGroup'), ('mo:MusicGroup', 'schema:affiliation', 'foaf:Organization'), ('foaf:Organization', 'rdfs:subClassOf', 'owl:Thing')]\n",
       "\n",
-      ": 총 2개의 query graph candidates generated\n"
+      ": 총 3개의 query graph candidates generated\n"
      ]
     }
    ],
@@ -173,113 +207,59 @@
     "        for arc_score, sp in qg:\n",
     "            query_graph_score += arc_score\n",
     "            sp_list.append(sp)\n",
+    "        sp_list = sum(sp_list, list())\n",
     "        query_graph.append((query_graph_score, sp_list))\n",
     "\n",
     "for score, qg in query_graph:\n",
-    "    print(score, qg)\n",
+    "    print(qg)\n",
     "\n",
     "print(f'\\n: 총 {len(query_graph)}개의 query graph candidates generated')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_query_graph = []\n",
-    "for score, qg in query_graph:\n",
-    "    if qg[-1][-1][1] != 'rdfs:subClassOf' and qg[0][0][1] != 'rdfs:subClassOf':\n",
-    "        new_query_graph.append((score/len(qg),qg))\n",
-    "        continue\n",
-    "    \n",
-    "    if qg[-1][-1][1] == 'rdfs:subClassOf':\n",
-    "        new_qg = []\n",
-    "        new_score = score\n",
-    "        terminated = False\n",
-    "\n",
-    "        for sp in qg[::-1]:\n",
-    "            n_delete = 0\n",
-    "            if terminated:\n",
-    "                new_qg.insert(0,sp)\n",
-    "                continue\n",
-    "            for arc in sp[::-1]:\n",
-    "                if arc[1] == 'rdfs:subClassOf':\n",
-    "                    n_delete+=1\n",
-    "                    new_score-=1\n",
-    "                else: \n",
-    "                    terminated = True\n",
-    "                    break\n",
-    "            if len(sp)-n_delete == 0: continue\n",
-    "            new_qg.insert(0, sp[:len(sp)-n_delete])\n",
-    "        qg = new_qg\n",
-    "\n",
-    "    if qg[0][0][1] == 'rdfs:subClassOf':\n",
-    "        new_qg = []\n",
-    "        terminated = False\n",
-    "\n",
-    "        for sp in qg:\n",
-    "            n_delete = 0\n",
-    "            if terminated:\n",
-    "                new_qg.append(sp)\n",
-    "                continue\n",
-    "            for arc in sp:\n",
-    "                if arc[1] == 'rdfs:subClassOf':\n",
-    "                    n_delete+=1\n",
-    "                    new_score-=1\n",
-    "                else: \n",
-    "                    terminated = True\n",
-    "                    break\n",
-    "            if len(sp)-n_delete == 0: continue\n",
-    "            new_qg.append(sp[n_delete:])\n",
-    "        \n",
-    "    if len(new_qg) == 0: continue\n",
-    "    \n",
-    "    if (new_score/len(new_qg), new_qg) in new_query_graph : continue\n",
-    "    new_query_graph.append((new_score/len(new_qg), new_qg))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[('foaf:Person', 'skmo:isComposedBy', 'mo:Track')], [('mo:Track', 'skmo:hasGenre', 'skmo:Genre')]]\n",
+      "[('mo:Track(skmo:뱅뱅뱅)', 'skmo:isSungBy', 'mo:MusicGroup'), ('mo:MusicGroup', 'schema:affiliation', 'foaf:Organization'), ('foaf:Organization', 'rdfs:subClassOf', 'owl:Thing')]\n",
+      "[('skmo:Instrumental(skmo:뱅뱅뱅_inst)', 'skmo:isSungBy', 'mo:MusicGroup'), ('mo:MusicGroup', 'schema:affiliation', 'foaf:Organization'), ('foaf:Organization', 'rdfs:subClassOf', 'owl:Thing')]\n",
+      "[('mo:Track(skmo:뱅뱅뱅_황치열)', 'skmo:isSungBy', 'mo:MusicGroup'), ('mo:MusicGroup', 'schema:affiliation', 'foaf:Organization'), ('foaf:Organization', 'rdfs:subClassOf', 'owl:Thing')]\n",
       "\n",
-      ": 총 1개의 query graph candidates generated\n"
+      ": 총 3개의 query graph candidates generated\n"
      ]
     }
    ],
    "source": [
-    "for score, qg in new_query_graph:\n",
+    "for score, qg in query_graph:\n",
     "    print(qg)\n",
     "\n",
-    "print(f'\\n: 총 {len(new_query_graph)}개의 query graph candidates generated')"
+    "print(f'\\n: 총 {len(query_graph)}개의 query graph candidates generated')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[('foaf:Person', 'skmo:isComposedBy', 'mo:Track')],\n",
-       " [('mo:Track', 'skmo:hasGenre', 'skmo:Genre')]]"
+       "[('mo:Track(skmo:뱅뱅뱅)', 'skmo:isSungBy', 'mo:MusicGroup'),\n",
+       " ('mo:MusicGroup', 'schema:affiliation', 'foaf:Organization'),\n",
+       " ('foaf:Organization', 'rdfs:subClassOf', 'owl:Thing')]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "final_query_graph = sorted(new_query_graph)[0][1]\n",
+    "final_query_graph = sorted(query_graph, key=lambda x: (x[0], len(x[1])))[0][1]\n",
     "final_query_graph"
    ]
   }
