--- a/notebooks/shortest_path_finding.ipynb
+++ b/notebooks/shortest_path_finding.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,11 +24,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "G = nx.MultiGraph()\n",
+    "G = nx.MultiDiGraph()\n",
     "\n",
     "for _, row in unit_path.iterrows():\n",
     "    source = row['domain']  \n",
@@ -44,17 +44,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "source_node = 'mo.Track'\n",
-    "target_node = 'SKMO_v2.4_0223.MusicActivity'"
+    "source_node = 'mo:Track'\n",
+    "target_node = 'skmo:Genre'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,14 +65,13 @@
     "    c = itertools.count()\n",
     "    fringe = []\n",
     "    path = [source]\n",
-    "    result = []\n",
-    "    global_dist = float('inf')\n",
+    "    result = (-1, [])\n",
     "\n",
     "    if n_triple is None:\n",
     "        n_triple = len(G.nodes)\n",
     "\n",
     "    if source == target:\n",
-    "        return result\n",
+    "        raise ValueError(f\"source({source}) and target({target}) are the same\")\n",
     "    \n",
     "    push(fringe, (0, next(c), source, path))\n",
     "\n",
@@ -83,11 +82,9 @@
     "            continue\n",
     "    \n",
     "        if target == path[-1]:\n",
-    "            if d > global_dist:\n",
-    "                continue\n",
     "            if p_name is None or p_name in path:\n",
-    "                result.append((d,path))\n",
-    "                global_dist = d\n",
+    "                result = (d,path)\n",
+    "                break\n",
     "            continue\n",
     "        \n",
     "\n",
@@ -99,47 +96,38 @@
     "                else: cost = 1\n",
     "                vu_dist = d + cost\n",
     "\n",
-    "                if vu_dist > global_dist:\n",
-    "                    continue\n",
-    "\n",
     "                new_path = list()\n",
     "                new_path += path\n",
     "                new_path += [e['property'], u]\n",
     "\n",
     "                push(fringe, (vu_dist, next(c), u, new_path))\n",
-    "    \n",
-    "    if len(result) == 0:\n",
-    "        return result\n",
-    "    \n",
-    "    # return result\n",
     "\n",
-    "    score = sorted(result)[0][0]\n",
-    "    shortest_path = sorted(result)[0][1]\n",
+    "    if len(result[1]) == 0:\n",
+    "        return result\n",
+    "\n",
+    "    score, shortest_path = result\n",
     "    shortest_path = [tuple(shortest_path[offset:offset+3]) for offset in range(0, len(shortest_path)-2, 2)]\n",
     "    return score, shortest_path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('mo.Track', 'SKMO_v2.4_0223.debutTrack', 'SKMO_v2.4_0223.MusicArtist'),\n",
-       " ('SKMO_v2.4_0223.MusicArtist',\n",
-       "  'SKMO_v2.4_0223.hasMusicActivity',\n",
-       "  'SKMO_v2.4_0223.MusicActivity')]"
+       "(0.0, [('mo:Track', 'skmo:hasGenre', 'skmo:Genre')])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "score, result = find_shortest_path(G, source_node, target_node, weight=False)\n",
+    "result = find_shortest_path(G, source_node, target_node, p_name='skmo:hasGenre', weight=True)\n",
     "result"
    ]
   }
