--- a/notebooks/query_graph_generation.ipynb
+++ b/notebooks/query_graph_generation.ipynb
@@ -82,9 +82,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "conceptual arc : ('skmo:뱅뱅뱅', 'skmo:isSungBy', 'mo:MusicGroup')\n",
+      "Tbox : ('mo:Track', 'skmo:isSungBy', 'mo:MusicGroup')\n",
+      "--------------------------------------------------------------------------------\n",
+      "conceptual arc : ('mo:MusicGroup', 'schema:affiliation', 'owl:Thing')\n",
+      "Tbox : ('mo:MusicGroup', 'schema:affiliation', 'owl:Thing')\n",
+      "--------------------------------------------------------------------------------\n",
+      "conceptual arc : ('skmo:뱅뱅뱅_inst', 'skmo:isSungBy', 'mo:MusicGroup')\n",
+      "Tbox : ('skmo:Instrumental', 'skmo:isSungBy', 'mo:MusicGroup')\n",
+      "--------------------------------------------------------------------------------\n",
+      "conceptual arc : ('skmo:뱅뱅뱅_황치열', 'skmo:isSungBy', 'mo:MusicGroup')\n",
+      "Tbox : ('mo:Track', 'skmo:isSungBy', 'mo:MusicGroup')\n",
+      "--------------------------------------------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "ca2sp = {}\n",
     "\n",
@@ -113,6 +132,10 @@
     "            \n",
     "            if e == 'Any P': e=None\n",
     "\n",
+    "            print(f'conceptual arc : {ca}')\n",
+    "            print(f'Tbox : {u, e, v}')\n",
+    "            print('-'*80)\n",
+    "\n",
     "            forward_result = find_shortest_path(G, u, v, e, weight=True)\n",
     "            backward_result = find_shortest_path(G, v, u, e, weight=True)\n",
     "\n",
@@ -122,7 +145,6 @@
     "            else:\n",
     "                score, result = backward_result\n",
     "                abox = ca[-1], ca[0]\n",
-    "\n",
     "\n",
     "            if len(result) == 0: continue\n",
     "\n",
@@ -139,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -148,16 +170,21 @@
      "text": [
       "----------------------------------------------------------------------------------------------------\n",
       "('skmo:뱅뱅뱅', 'skmo:isSungBy', 'mo:MusicGroup')의 shortest path : \n",
-      "[('mo:Track(skmo:뱅뱅뱅)', 'skmo:isSungBy', 'mo:MusicGroup')]\n",
+      "\n",
+      "('mo:Track(skmo:뱅뱅뱅)', 'skmo:isSungBy', 'mo:MusicGroup')\n",
       "----------------------------------------------------------------------------------------------------\n",
       "('mo:MusicGroup', 'schema:affiliation', 'owl:Thing')의 shortest path : \n",
-      "[('mo:MusicGroup', 'schema:affiliation', 'foaf:Organization'), ('foaf:Organization', 'rdfs:subClassOf', 'owl:Thing')]\n",
+      "\n",
+      "('mo:MusicGroup', 'schema:affiliation', 'foaf:Organization')\n",
+      "('foaf:Organization', 'rdfs:subClassOf', 'owl:Thing')\n",
       "----------------------------------------------------------------------------------------------------\n",
       "('skmo:뱅뱅뱅_inst', 'skmo:isSungBy', 'mo:MusicGroup')의 shortest path : \n",
-      "[('skmo:Instrumental(skmo:뱅뱅뱅_inst)', 'skmo:isSungBy', 'mo:MusicGroup')]\n",
+      "\n",
+      "('skmo:Instrumental(skmo:뱅뱅뱅_inst)', 'skmo:isSungBy', 'mo:MusicGroup')\n",
       "----------------------------------------------------------------------------------------------------\n",
       "('skmo:뱅뱅뱅_황치열', 'skmo:isSungBy', 'mo:MusicGroup')의 shortest path : \n",
-      "[('mo:Track(skmo:뱅뱅뱅_황치열)', 'skmo:isSungBy', 'mo:MusicGroup')]\n",
+      "\n",
+      "('mo:Track(skmo:뱅뱅뱅_황치열)', 'skmo:isSungBy', 'mo:MusicGroup')\n",
       "----------------------------------------------------------------------------------------------------\n"
      ]
     }
@@ -172,9 +199,9 @@
     "        print('-'*100)\n",
     "        print(f'{k}의 shortest path : ')\n",
     "        for elem in v:\n",
-    "            print(elem[1])\n",
-    "            # for e in elem:\n",
-    "            #     print(e)\n",
+    "            print()\n",
+    "            for e in elem[1]:\n",
+    "                print(e)\n",
     "print('-'*100)"
    ]
   },
